--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,6 @@
 
 $blockName: 'app';
 
-
 body, html {
 	font-size: 16px;
 	margin: 0;
@@ -10,6 +9,9 @@ body, html {
 }
 
 .#{$blockName} {
+	@include grid-flex();
+	@include ReactCssTransitionGroup();
+
 	min-height: 100vh;
 	width: 100%;
 	display: flex;
@@ -17,6 +19,7 @@ body, html {
 	align-items: baseline;
 	justify-content: space-between;
 	flex-direction: column;
+
 
 	&__header {
 		background: rgba(0, 0, 0, 0.5);
@@ -28,7 +31,6 @@ body, html {
 		width: 100%;
 		flex-grow: 1;
 		display: flex;
-		align-items: center;
 	}
 
 	&__footer {
@@ -39,20 +41,6 @@ body, html {
 	&__footer-title {
 		padding: 15px 0;
 		color: $color-red;
-	}
-
-	&__container {
-		max-width: 1200px;
-		min-width: 320px;
-		width: 100%;
-		margin: 0 auto;
-	}
-
-	&__row {
-		width: auto;
-		margin: 0 10px;
-		display: flex;
-		flex-wrap: wrap;
 	}
 
 	&__header-title {
@@ -92,17 +80,17 @@ body, html {
 		color: #ffffff;
 	}
 
-	&__search-by-btn{
+	&__search-by-btn {
 		margin: 0 0 0 10px;
 	}
 
-	&__search-run{
+	&__search-run {
 		flex-grow: 1;
 		display: flex;
 		flex-direction: row-reverse;
 	}
 
-	&__status-bar{
+	&__status-bar {
 		background: #ccc;
 		color: #000;
 		width: 100%;
@@ -110,16 +98,16 @@ body, html {
 		padding: 10px 0;
 	}
 
-	&__status-bar-found{
+	&__status-bar-found {
 		flex-grow: 1;
 	}
 
-	&__status-bar-sort{
+	&__status-bar-sort {
 		min-width: 50%;
 		display: flex;
 	}
 
-	&__status-bar-sort-btn{
+	&__status-bar-sort-btn {
 		margin: 0 0 0 10px;
 	}
 }
