--- a/src/config.scss
+++ b/src/config.scss
@@ -28,3 +28,52 @@ $color-gray: #999;
 		}
 	}
 }
+
+@mixin grid-flex($col-count: 12) {
+	width: 100%;
+
+	&__container {
+		max-width: 1200px;
+		min-width: 320px;
+		width: 100%;
+		margin: 0 auto;
+	}
+
+	&__row {
+		width: auto;
+		margin: 0 10px;
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	&__col {
+		width: 100%;
+	}
+
+	@for $i from 1 through $col-count {
+		&__col-#{$i} {
+			width: (100% * $i) /$col-count;
+		}
+	}
+}
+
+@mixin ReactCssTransitionGroup($transitionName:'page') {
+	.#{$transitionName}-enter {
+		opacity: 0.01;
+
+		&.#{$transitionName}-enter-active {
+			opacity: 1;
+			transition: opacity 1s ease-in;
+		}
+	}
+
+	.#{$transitionName}-leave {
+		opacity: 1;
+
+		&.#{$transitionName}-leave-active {
+			opacity: 0.01;
+			transition: opacity 0.5s ease-in;
+		}
+	}
+
+}
