--- a/src/components/SearchResultsItem/SearchResultsItem.scss
+++ b/src/components/SearchResultsItem/SearchResultsItem.scss
@@ -14,8 +14,31 @@ $blockName: 'search-results-item';
 		transition: 1s;
 		background: rgba(0, 0, 0, 0.5);
 	}
+
 	&__cover {
 		max-width: 100%;
-		max-height: 100%;
+		margin: 0 auto;
+	}
+	&__info {
+		position: relative;
+		margin: 10px 0 0;
+		width: 100%;
+		line-height: 1;
+	}
+	&__title {
+		width: 100%;
+		font-size: 1.5rem;
+	}
+	&__year {
+		border: 1px solid #000;
+		position: absolute;
+		right: 0;
+		top: 0;
+		padding: 0 5px;
+	}
+	&__genre {
+		width: 100%;
+		font-size: 0.75rem;
+		color: #444444;
 	}
 }
