--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -4,7 +4,12 @@ $blockName: 'search';
 
 .#{$blockName} {
 	@include grid-flex();
+
 	&__sidebar {
 		width: 100%;
+	}
+
+	&__results{
+		@include xy-cell(12);
 	}
 }
