--- a/src/components/FilmItem/FilmItem.scss
+++ b/src/components/FilmItem/FilmItem.scss
@@ -10,6 +10,7 @@ $blockName: 'film-item';
 	padding: 10px;
 	text-decoration: none;
 	color: #000;
+	align-items: flex-start;
 
 	&:hover {
 		cursor: pointer;
