--- a/src/components/FilmList/FilmList.scss
+++ b/src/components/FilmList/FilmList.scss
@@ -3,5 +3,26 @@
 $blockName: 'film-list';
 
 .#{$blockName} {
+	display: flex;
+	width: 100%;
+	flex-wrap: wrap;
 
+
+	&__list {
+		@include xy-grid();
+
+		justify-content: flex-start;
+	}
+
+	&__item {
+		@include xy-cell(6);
+
+		@include breakpoint(medium) {
+			@include xy-cell(4);
+		}
+
+		@include breakpoint(large) {
+			@include xy-cell(3);
+		}
+	}
 }
